--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,11 @@ python-dotenv
 pymongo
 fuzzywuzzy
 python-Levenshtein
+PyMuPDF==1.23.26
+python-docx==1.1.0
+Pillow==10.2.0
+pytesseract==0.3.10
+opencv-python==4.9.0.80
+numpy==1.26.4
+scikit-learn==1.4.1.post1
+nltk==3.8.1
